chore: generate type declarations

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "rimraf dist && vue-tsc --declaration --emitDeclarationOnly --declarationDir dist/types && vite build && npm run build:styles",
+    "build": "rimraf dist && vite build && npm run build:styles && npm run build:types",
+    "build:types": "vue-tsc --project tsconfig.build.json",
     "build:styles": "tailwindcss -i ./src/styles/tailwind.css -o ./dist/styles.css --minify",
     "typecheck": "vue-tsc --noEmit",
     "test": "vitest"
