--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chatkit-vue",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "type": "module",
   "description": "Unofficial Vue 3 bindings for OpenAI ChatKit with Tailwind-styled UI components.",
   "author": "",
@@ -38,8 +38,8 @@
   },
   "peerDependencies": {
     "@openai/chatkit": "^1.0.0",
-    "vue": "^3.4.0",
-    "nuxt": "^3.0.0 || ^4.0.0"
+    "nuxt": "^3.0.0 || ^4.0.0",
+    "vue": "^3.4.0"
   },
   "peerDependenciesMeta": {
     "nuxt": {
@@ -47,23 +47,23 @@
     }
   },
   "devDependencies": {
-    "@headlessui/vue": "^1.7.20",
-    "@openai/chatkit": "^1.0.0",
+    "@headlessui/vue": "^1.7.23",
+    "@openai/chatkit": "^1.1.0",
     "@types/markdown-it": "^14.1.2",
-    "@types/node": "^20.12.7",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "@vue/test-utils": "^2.4.5",
-    "autoprefixer": "^10.4.18",
+    "@types/node": "^25.0.0",
+    "@vitejs/plugin-vue": "^6.0.2",
+    "@vue/test-utils": "^2.4.6",
+    "autoprefixer": "^10.4.22",
     "clsx": "^2.1.1",
     "markdown-it": "^14.1.0",
-    "postcss": "^8.4.38",
-    "rimraf": "^5.0.5",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.4.5",
-    "unbuild": "^2.0.0",
-    "vite": "^5.2.9",
-    "vitest": "^1.6.0",
-    "vue": "^3.4.21",
-    "vue-tsc": "^2.0.7"
+    "postcss": "^8.5.6",
+    "rimraf": "^6.1.2",
+    "tailwindcss": "^3.4.18",
+    "typescript": "^5.9.3",
+    "unbuild": "^3.6.1",
+    "vite": "^7.2.7",
+    "vitest": "^4.0.15",
+    "vue": "^3.5.25",
+    "vue-tsc": "^3.1.8"
   }
 }
